@@ -27,6 +27,7 @@ COM_CONTENT_MONTH="Month"
 COM_CONTENT_MORE_ARTICLES="More Articles..."
 COM_CONTENT_NO_ARTICLES="There are no articles in this category"
 COM_CONTENT_NUM_ITEMS="Article Count:"
+COM_CONTENT_ORDERING="Ordering:<br />New articles default to the first position in the Category. The ordering can be changed in back-end."
 COM_CONTENT_PAGEBREAK_DOC_TITLE="Pagebreak"
 COM_CONTENT_PAGEBREAK_INSERT_BUTTON="Insert Page Break"
 COM_CONTENT_PAGEBREAK_TITLE="Page Title:"
